# auto-verify

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  Dockerfile  LICENSE  README.md  how --name-only HEAD~5..HEAD | grep -E "(build|setup|install)"  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  requirements_dev.txt  run_logs.txt  setup.cfg  tox.ini
.github/: dependabot.yml
.github/workflows/: docs.yml  tests.yml
api/: index.html
autoverify/: __init__.py  config.py  doctest.py  types.py
autoverify/TmpModule/: temp.py
autoverify/cli/: __main__.py  main.py
autoverify/cli/install/: __init__.py  install.py
autoverify/cli/install/installers/: __init__.py  dummy_verifier.py  nnenum.py
autoverify/cli/install/venv_installers/: __init__.py  venv_install.py
autoverify/cli/install/verifiers/: dummy_verifier.py
autoverify/cli/util/: conda.py  git.py
autoverify/portfolio/: VerifierPortfolio.py  __init__.py  portfolio.py  portfolio_runner.py  portfolio_scenario.py  select_verifier_configspace.py  target_function.py
autoverify/portfolio/.old/: target_function.py
autoverify/portfolio/.old/hydra/: __init__.py  hydra.py  hydra_scenario.py  incumbent.py
autoverify/portfolio/.old/run/: sequential_runner.py
autoverify/portfolio/.old/train/: simple_train.py
autoverify/portfolio/hydra/: __init__.py  cost_matrix.py  hydra.py  hydra_verifier_scenario.py  incumbent.py
autoverify/portfolio/hydrasmac/: __init__.py
autoverify/portfolio/hydrasmac/hydra/: hydra.py  incumbents.py  types.py
autoverify/portfolio/hydrasmac/util/: scenario_util.py
autoverify/portfolio/hydrasmac0/hydra/: __init__.py  incumbents.py
autoverify/portfolio/hydrasmac0/util/: scenario_util.py
autoverify/portfolio/run/: sequential_runner.py
autoverify/portfolio/train/: hydra_train.py  simple_train.py
autoverify/tune/: __init__.py  tune_hydra.py  tune_verifier.py
autoverify/util/: __init__.py  cli.py  conda.py  configs.py  cost_dict.py  data.py  dataclass.py  dict.py  env.py  instances.py  loggers.py  onnx.py  path.py  proc.py  resource_strategy.py  resources.py  smac.py  target_function.py  tempfiles.py  verification_instance.py  verifiers.py  vnncomp.py  vnncomp_filters.py  yaml.py
autoverify/verifier/: __init__.py  verification_result.py  verifier.py  verifier_configuration.py  verifier_configuration_space.py
autoverify/verifier/complete/: __init__.py
autoverify/verifier/complete/abcrown/: TEMP_ABCROWN_HYPERPARAMS.py  __init__.py  abcrown_configspace.py  abcrown_configspace2.py  abcrown_verifier.py  abcrown_yaml_config.py  abcrown_yaml_generator.py  configspace.py  configspace2.py  temp_all_params.yml  verifier.py
autoverify/verifier/complete/dummy/: __init__.py  dummy_verifier.py
autoverify/verifier/complete/dummy_verifier/: __init__.py  dummy_configspace.py  dummy_verifier.py
autoverify/verifier/complete/mnbab/: TEMP_MNIST_SMALL.json  __init__.py  configspace.py  mnbab_configspace.py  mnbab_json.py  mnbab_verifier.py  verifier.py
autoverify/verifier/complete/nnenum/: __init__.py  configspace.py  nnenum_configspace.py  nnenum_verifier.py  verifier.py
autoverify/verifier/complete/ovalbab/: __init__.py  configspace.py  ovalbab_configspace.py  ovalbab_json_config.py  ovalbab_verifier.py  temp_ovalbab_config.json  verifier.py
autoverify/verifier/complete/sdpcrown/: __init__.py  configspace.py  sdpcrown_yaml_config.py  verifier.py
autoverify/verifier/complete/verinet/: __init__.py  configspace.py  verifier.py
autoverify/verifier/dummy_verifier/: __init__.py  dummy_configspace.py  dummy_verifier.py
autoverify/verifiers/: VerifierConfiguration.py  __init__.py  types.py  verification_result.py  verifier.py  verifier_configuration.py
autoverify/verifiers/configspaces/: __init__.py  abstract_verifier_configuration.py  nnenum.py  oval_bab.py  verifier_configuration.py
autoverify/verify/: __init__.py  eval_verifier.py
benchmarks/: util.py
benchmarks/trivial/: README.md
benchmarks/vnncomp2022/test_props/: instances.csv
benchmarks/vnncomp2022_small/mnist_fc/vnnlib/: prop_0_0.03.vnnlib.compiled
docs/: about.md  api.md  contributing.md  examples.md  getting-started.md  how-to-guides.md  index.md  reference.md  tutorials.md
how-to-guides/: index.html
scripts/: clean_all.sh  ovalbab_cfg_test.py  publish_package_release.sh  select_verifier.py  util.py
scripts/abcrown_mnist/: abcrown_mnist_bench.py  bench_abcrown_mnist.py  cfg_abcrown_mnist.py  hydra_abcrown_mnist.py  mnist.yaml  mnist_small.yaml
scripts/baselines/: nnenum_baseline.py  smac_nnenum.py
scripts/baselines/mnist/: abcrown.py  baseline.py  nnenum.py  ovalbab.py
scripts/eval/: abcrown_mnist_small.yaml  cli_eval_verifier.py  cli_eval_vnn_verifier.py  eval_config.py  eval_default_config.py  eval_mnist_config.py  parse_eval_csv.py  parse_pf_csv.py  parse_runhistory.py  vbs_csv.py
scripts/mnist_smac/: abcrown.py
scripts/plot/: plot_pf_ecdf.py  plot_vbs_csv.py  plot_vbs_ecdf.py
scripts/tuning/: abcrown_batch_size.py  abcrown_mnist.py  abcrown_mnist_small_ac.py  abcrown_mnist_small_hpo.py  hydra.py  tune_verifier_vnncomp.py
search/: search_index.json
tests/: __init__.py  conftest.py  util.py
tests/fake_vnncomp/: gen_inst_csv.py
tests/fake_vnncomp/trivial_clone/: instances.csv
tests/test_cli/: test_cli.py  test_install.py  test_util.py
tests/test_experiment/: test_benchmark.py
tests/test_portfolio/: __init__.py  conftest.py  test_cost_matrix.py  test_portfolio.py  test_portfolio_runner.py  test_resource_tracker.py  test_simple_train.py
tests/test_util/: test_configs.py  test_dict.py  test_env.py  test_instances.py  test_onnx.py  test_path.py  test_proc.py  test_resource_strategy.py  test_smac.py  test_target_function.py  test_tempfiles.py  test_util.py
tests/test_util/some_runhistory/: configspace.json  intensifier.json  optimization.json  runhistory.json  scenario.json
tests/test_verifier/: conftest.py  test_abcrown.py  test_configs.py  test_eval.py  test_nnenum.py  test_trivial.py  test_verifier.py  test_verifier2.py
(+29 files in other folders)
