[metadata]
name = auto-verify
description = Automated verification of neural network properties
author = Corné Spek
license = BSD 3-Clause License
license_file = LICENSE
platforms = unix
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.9
package_dir =
    =autoverify
zip_safe = no

[options.extras_require]
testing =
    pytest>=7.2.0
    pytest-cov>=2.0
    mypy>=0.991
    flake8>=5.0.4
    tox>=4.0.3
    black>=22.10.0

[options.package_data]
slapping = py.typed

[flake8]
max-line-length = 120